# news_agent

./: .gitignore  ANSWERS_TO_QUESTIONS.md  AUDIO_COMPRESSION_SUMMARY.md  AUDIO_PIPELINE_COMPLETE.md  BACKEND_IMPROVEMENTS_2025.md  BUG_FIX_WEBSOCKET_403.md  CONVERSATION_LOGGER_FIX.md  CRITICAL_FIXES_NEEDED.md  DATABASE_COMPLETE.md  FIGMA_DESIGN_SUMMARY.md  FRONTEND_REQUIREMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  LOGGING_SUMMARY.md  MVP.md  Makefile  NEXT_STEPS_DEBUG.md  PRD.md  PRE_COMMIT_TEST.md  PROJECT_STATUS.md  PYAUDIO_TO_SOUNDDEVICE_MIGRATION.md  README.md  RENDER_DEPLOYMENT_PROPER_FIX.md  SENSEVOICE_DEPLOYMENT_SETUP.md  SENSEVOICE_INTEGRATION.md  SENSEVOICE_SETUP_COMPLETE.md  SESSION_SUMMARY_2025_10_12.md  START_TEST.sh  STREAMING_AND_DEPLOYMENT.md  STREAMING_IMPLEMENTATION_STATUS.md  TESTING.md  TESTING_GUIDE.md  TESTING_INSTRUCTIONS.md  TEST_FAILURE_REPORT.md  TEST_INFRASTRUCTURE_COMPLETE.md  TEST_INTEGRATION_SUCCESS.md  TODO.md  UPDATES_SUMMARY.md  VAD_CONFIG_GUIDE.md  (+31 more)
.claude/: CLAUDE.md
.cursor/: check_rls_policies.py  describe_all_tables.py  get_actual_columns.py  get_table_columns.py  list_all_supabase_tables.py  mcp.json  supabase_tool.py  test_both_keys.py  test_watchlist.py
.cursor/agent-rules/: add-to-changelog.mdc  analyze-issue.mdc  architecture-docs.mdc  bug-fix.mdc  clean.mdc  code-analysis.mdc  commit-fast.mdc  commit.mdc  context-prime.mdc  continuous-improvement.mdc  create-command.mdc  create-docs.mdc  cursor-rules-meta-guide.mdc  docs-alignment.mdc  implement-task.mdc  mermaid.mdc  pr-review.mdc  update-docs.mdc  version-history.mdc
backend/: Dockerfile  README.md
backend/app/: __init__.py  cache.py  config.py  database.py  design.md  main.py  marmadi.md
backend/app/api/: conversation.py  conversation_session.py  news.py  user.py  voice.py  voice_settings.py  websocket_simple.py
backend/app/core/: __init__.py  agent_wrapper.py  audio_validator.py  hf_space_asr.py  streaming_handler.py  websocket_manager.py  websocket_manager_enhanced.py  websocket_manager_v2.py
backend/app/models/: conversation.py  news.py  stock.py  user.py  voice.py
backend/app/utils/: __init__.py  conversation_logger.py  logger.py
backend_huggingface/: README.md  app.py  requirements.txt
database/: README.md  create_demo_data.sql  schema.sql
docs/: DOCUMENTATION_FRAMEWORK.md  PRD.md  RENDER_DEPLOYMENT.md  _navbar.md  _sidebar.md  flow.md  index.html  log.md  package-lock.json
docs/docs/: LOCAL_SETUP.md  RENDER_DEPLOYMENT.md  REQUIREMENTS_VERIFICATION.md
docs/docs/reference/: CURSOR_DOCUMENTATION_RULES.md  E2E_QUICK_START.md  E2E_TESTING_GUIDE.md  FRONTEND_LOGGING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  SRC_STREAMING_GUIDE.md  STREAMING_AND_DEPLOYMENT.md  (+8 more)
docs/reference/: FRONTEND_WEBSOCKET_FIXED.md  HF_SPACE_MIGRATION_SUMMARY.md  LATENCY_OPTIMIZATION_GUIDE.md  README.md  SYSTEM_DESIGN_CURRENT.md  VAD_AND_COMPRESSION_GUIDE.md  WAV_IMPLEMENTATION_COMPLETE.md
documentation/: README.md  README_docs.md  _sidebar.md  index.html
documentation/docs/: TESTING.md
documentation/reference/: CONTINUOUS_VOICE_GUIDE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  RENDER_DEBUG.md  SENSEVOICE_DEPLOYMENT_SETUP.md  VAD_FIXES.md
documentation/technical/: API_DESIGN.md  DATABASE_SETUP.md
env_files/: env.example
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
frontend/.vercel/: project.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConversationHistory.tsx  Header.tsx  NewsDisplay.tsx  UserProfileModal.tsx  VoiceInterface.tsx  Watchlist.tsx
frontend/contexts/: NewsContext.tsx  VoiceContext.tsx
frontend/src/: ARCHITECTURE.md  App.tsx  DATABASE_INFO.md  README.md  index.css
reference/: API_DESIGN.md  AUDIO_FORMAT_CURRENT.md  AUDIO_PIPELINE_FIXES.md  FRONTEND_WEBSOCKET_FIX.md  FRONTEND_WEBSOCKET_ROOT_CAUSE.md  QUICK_START_VAD_COMPRESSION.md  RENDER_DEPLOYMENT_FIX.md
scripts/: README_huggingface_testing.md  README_render_testing.md  download_sensevoice.py  download_sensevoice_deploy.py  test_huggingface_space.py  test_local_setup.py  test_render_websocket.py  update_version.py  validate_docs.py
src/: agent.py  audio_logger.py  config.py  conversation_logger.py  ipc.py  main.py  main_streaming.py  memory.py  news_speaker_process.py  parallel_main.py  simple_parallel_agent.py  voice_activity_detector.py  voice_input.py  voice_listener_process.py  voice_output.py  webrtcvad.py
tests/: README.md  TEST_INDEX.md  TEST_STRUCTURE.md  VAD_TESTING_GUIDE.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  run_e2e_tests.sh  run_tests.py  run_vad_tests.py  test_agent.py  test_api_conversation_log.py  test_api_profile.py  test_backend_websocket_integration.py  test_interruption_scenarios.py  test_parallel_communication.py  test_preference_learning.py  test_sensevoice_integration.py  test_simple_parallel.py  test_voice.py
tests/archive/: test_agent.py  test_voice_interaction.py
tests/backend/: test_core_agent_wrapper.py
tests/backend_huggingface/: __init__.py
tests/e2e/: run_e2e_tests.sh
tests/integration/: conftest.py  run_e2e_tests.sh  run_vad_tests.py  test_api_integration.py  test_e2e_vad_interruption.py
tests/src/: __init__.py  test_agent.py  test_voice_input.py  test_voice_output.py
tests/testing_utils/: AUDIO_TESTING_GUIDE.md  README.md
tests/utils/: generate_test_audio.py
tests/voice_samples/: voice_samples.json
tests_archive/: test_audio_pipeline.py  test_compressed_audio.py  test_encoded_audio.py  test_voice_pipeline.py  test_websocket.py  test_websocket_audio.py  test_websocket_simple.py
utils/: voice_encoder.py
(+82 files in other folders)
